// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders correctly 1`] = `
.c1 {
  margin: 0 0;
}

.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
}

<List
  columns={null}
  flush={false}
  ordered={false}
>
  <StyledComponent
    columns={null}
    flush={false}
    forwardedRef={null}
    ordered={false}
  >
    <ul
      className="c0"
    >
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 1
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 2
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 3
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
    </ul>
  </StyledComponent>
</List>
`;

exports[`<List /> with columns set renders correctly 1`] = `
.c2 {
  margin: 0 0;
}

.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.c0 .c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 33.333333333333336%;
  -ms-flex-preferred-size: 33.333333333333336%;
  flex-basis: 33.333333333333336%;
}

<List
  columns={3}
  flush={false}
  ordered={false}
>
  <StyledComponent
    columns={3}
    flush={false}
    forwardedRef={null}
    ordered={false}
  >
    <ul
      className="c0"
    >
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1 c2"
          >
            <Clean.div
              className="c1 c2"
              is="li"
            >
              <li
                className="c1 c2"
              >
                Hello Item 1
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1 c2"
          >
            <Clean.div
              className="c1 c2"
              is="li"
            >
              <li
                className="c1 c2"
              >
                Hello Item 2
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1 c2"
          >
            <Clean.div
              className="c1 c2"
              is="li"
            >
              <li
                className="c1 c2"
              >
                Hello Item 3
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
    </ul>
  </StyledComponent>
</List>
`;

exports[`<List /> with flush set renders correctly 1`] = `
.c1 {
  margin: 0 0;
}

.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
}

<List
  columns={null}
  flush={true}
  ordered={false}
>
  <StyledComponent
    columns={null}
    flush={true}
    forwardedRef={null}
    ordered={false}
  >
    <ul
      className="c0"
    >
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 1
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 2
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 3
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
    </ul>
  </StyledComponent>
</List>
`;

exports[`<List /> with ordered prop renders correctly 1`] = `
.c1 {
  margin: 0 0;
}

.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
}

<List
  columns={null}
  flush={false}
  ordered={true}
>
  <StyledComponent
    columns={null}
    flush={false}
    forwardedRef={null}
    ordered={true}
  >
    <ol
      className="c0"
    >
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 1
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 2
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1"
          >
            <Clean.div
              className="c1"
              is="li"
            >
              <li
                className="c1"
              >
                Hello Item 3
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
    </ol>
  </StyledComponent>
</List>
`;

exports[`<List /> with responsive columns set renders correctly 1`] = `
.c2 {
  margin: 0 0;
}

.c3 .c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 33.333333333333336%;
  -ms-flex-preferred-size: 33.333333333333336%;
  flex-basis: 33.333333333333336%;
}

.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.c0 .c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

@media screen and (min-width:40rem) {
  .c0 .c1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

@media screen and (min-width:52rem) {
  .c0 .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
  }
}

<List
  columns={
    Array [
      1,
      2,
      3,
    ]
  }
  flush={false}
  ordered={false}
>
  <StyledComponent
    columns={
      Array [
        1,
        2,
        3,
      ]
    }
    flush={false}
    forwardedRef={null}
    ordered={false}
  >
    <ul
      className="c0"
    >
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1 c2"
          >
            <Clean.div
              className="c1 c2"
              is="li"
            >
              <li
                className="c1 c2"
              >
                Hello Item 1
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1 c2"
          >
            <Clean.div
              className="c1 c2"
              is="li"
            >
              <li
                className="c1 c2"
              >
                Hello Item 2
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
      <ListItem>
        <StyledComponent
          forwardedRef={null}
        >
          <Clean.li
            className="c1 c2"
          >
            <Clean.div
              className="c1 c2"
              is="li"
            >
              <li
                className="c1 c2"
              >
                Hello Item 3
              </li>
            </Clean.div>
          </Clean.li>
        </StyledComponent>
      </ListItem>
    </ul>
  </StyledComponent>
</List>
`;
